fix(types): add TypeScript types for E2E tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "src/app/**/*.ts", "src/app/**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "src/app/**/*.ts",
+    "src/app/**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "e2e/**/*.ts",
+    ".next/types/**/*.ts"
+  ],
   "exclude": ["node_modules", "src/__tests__", "vitest.setup.ts"]
 }
